# narratasync

./: README.md
narratasync-backend/: .env.example  .gitignore  Cargo.toml  diesel.toml
narratasync-backend/migrations/2025-09-21-012013-0000_create_tables/: down.sql  up.sql
narratasync-backend/src/: main.rs  models.rs  schema.rs
narratasync-frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.mts
narratasync-frontend/src/: components.d.ts  typed-router.d.ts
narratasync-frontend/src/components/: AppHeader.vue  HelloWorld.vue  List.vue
narratasync-frontend/src/layouts/: default.vue
narratasync-frontend/src/pages/: index.vue
narratasync-frontend/src/pages/[id]/: preview.vue
narratasync-frontend/src/styles/: settings.scss
