[package]
name = "narratasync-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
diesel = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15"
http = "1.1.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
